# FreezerStock

./: .gitignore  README.md  docker-compose.yml  freeze.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh  start.sh  vercel.json
authentication/: urls.py
core/: metrics.py  permissions.py  settings.py  urls.py  views.py
core/templates/: base.html  home.html
core/templates/components/: _footer.html  _geladinho_metrics.html  _header.html  _pagination.html  _sales_metrics.html  _sidebar.html
core/templates/registration/: login.html
docs/: index.md
geladinhos/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
geladinhos/migrations/: 0001_initial.py  0002_alter_geladinho_selling_price.py  0003_alter_geladinho_options.py
geladinhos/templates/: geladinho_create.html  geladinho_delete.html  geladinho_detail.html  geladinho_list.html  geladinho_update.html
inflows/: admin.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
inflows/migrations/: 0001_initial.py  0002_inflow_manufacturing_date.py
inflows/templates/: inflow_create.html  inflow_detail.html  inflow_list.html
outflows/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
outflows/management/commands/: smtp_diario.py  smtp_sales_local.py
outflows/migrations/: 0001_initial.py  0002_outflow_selling_price_outflow.py
outflows/templates/: outflow_create.html  outflow_detail.html  outflow_list.html
services/: notify.py
